# maper_trader

./: (Reference) Bitcoin On-Chain Metrics Definitions.xlsx  .gitignore  Bitcoin_on_chain_0922.ipynb  pyproject.toml  test_features.ipynb  testing.ipynb
features/: fear_index.py  on_chain_data.py
managers/: history_manager.py  model_manager.py  position_manager.py
scripts/: lint.sh  start.sh  test.sh
