[project]
name = "maper-trader"
version = "0.1.0"
description = ""
authors = [
    {name = "Reagan",email = "rrr.chanhiulok@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "python-binance (>=1.0.29,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "ta-lib (>=0.6.6,<0.7.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "xgboost (>=3.0.4,<4.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
ruff = "^0.12.11"
pandas-stubs = "^2.3.2.250827"

